Fix default-user placeholder contrast (#6902)

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/components/Navigation/userSection.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/components/Navigation/userSection.scss
@@ -54,11 +54,11 @@ $lightColor: $silver;
     }
 
     .placeholder {
-        color: $color;
+        color: $alto;
         font-size: 20px;
         line-height: 30px;
         text-align: center;
-        background-color: $lightColor;
+        background-color: $mirage;
     }
 }
 
